<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MYPROFILE">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:text="@string/country_nigeria"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:text="@string/phone_number_08134919897"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:text="@string/email_ajitata6f_gmail_com"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:text="@string/slack_username_ajitata6f"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="212dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ajitata"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:text="@string/user_name"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/divider2"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:text="@string/track_android"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view" />
</android.support.constraint.ConstraintLayout>